--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
         <module>user-business</module>
         <module>order-business</module>
         <module>parkinglot</module>
+        <module>userwallet</module>
+
+
     </modules>
 
     <dependencies>
@@ -34,6 +37,19 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-annotation</artifactId>
+            <version>3.1.2</version>
+        </dependency>
+
     </dependencies>
 
 
